@@ -4,6 +4,8 @@ Products.CMFCalendar Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- Converted the CalendarTool into a local utility.
+
 - Made sure converted tools are used as utilities.
 
 - Fixed tests to be compatibility with DateTime 3.
